--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "moment": "2.29.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
@@ -57,9 +58,13 @@
     "react-copy-to-clipboard": "5.0.3",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "redux": "^4.1.0",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
