--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-table": "^7.7.0",
     "reactstrap": "8.9.0",
     "redux": "^4.1.0",
     "redux-react-session": "^2.6.1",
