--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.2.0",
   "description": "React version of Argon Dashboard by Creative Tim",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/argon-dashboard-react.git"
-  },
+  "repository": "git+https://github.com/creativetimofficial/argon-dashboard-react.git",
   "keywords": [
     "react",
     "reactjs",
@@ -64,7 +61,8 @@
     "reactstrap": "8.9.0",
     "redux": "^4.1.0",
     "redux-react-session": "^2.6.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
