--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "classnames": "2.2.6",
     "immutable": "^4.0.0-rc.12",
     "moment": "2.29.1",
+    "multiselect-react-dropdown": "^2.0.1",
     "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
