--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "immutable": "^4.0.0-rc.12",
     "moment": "2.29.1",
-    "multiselect-react-dropdown": "^2.0.1",
-    "node-sass": "4.14.1",
+    "multiselect-react-dropdown": "^2.0.4",
+    "node-sass": "^4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
     "react": "17.0.1",
