--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "17.0.1",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
+    "react-csv": "1.0.14",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
     "react-loader-spinner": "^4.0.0",
