--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "immutable": "^4.0.0-rc.12",
     "moment": "2.29.1",
     "multiselect-react-dropdown": "^2.0.4",
+    "react-dropdown-select": "^4.7.4",
     "node-sass": "^4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
+    "proxy": "^1.0.2",
     "react": "17.0.1",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
+    "react-csv": "1.0.14",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.1",
     "react-loader-spinner": "^4.0.0",
